// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`withMessage() throws error with custom message when matcher fails 1`] = `
"Custom message:
  should fail

expected ACTUAL to be 1"
`;

exports[`withMessage() throws error with custom message when not matcher fails 1`] = `
"Custom message:
  should fail

expected ACTUAL to not be ACTUAL"
`;
